cabal-version:      2.4
name:               aoc-solutions
version:            0.1.0.0
synopsis:           Solutions to Advent of Code 2022
-- bug-reports:
license:            MIT
-- author:
-- maintainer:
-- copyright:
-- category:
extra-source-files: README.md

library
    exposed-modules:
          Aoc.Utils
        , Aoc.Day.One.PartOne
        , Aoc.Day.One.PartTwo
        , Aoc.Day.One.Common
        , Aoc.Day.Two.PartOne
        , Aoc.Day.Two.PartTwo
        , Aoc.Day.Two.Common
        , Aoc.Day.Three.PartOne
        , Aoc.Day.Three.PartTwo
        , Aoc.Day.Three.Common
        , Aoc.Day.Four.PartOne
        , Aoc.Day.Four.PartTwo
        , Aoc.Day.Four.Common
        , Aoc.Day.Five.PartOne
        , Aoc.Day.Five.PartTwo
        , Aoc.Day.Five.Common
        , Aoc.Day.Six.PartOne
        , Aoc.Day.Six.PartTwo
        , Aoc.Day.Six.Common
        , Aoc.Day.Seven.PartOne
        , Aoc.Day.Seven.PartTwo
        , Aoc.Day.Seven.Common
        , Aoc.Day.Eight.PartOne
        , Aoc.Day.Eight.PartTwo
        , Aoc.Day.Eight.Common
        , Aoc.Day.Nine.PartOne
        , Aoc.Day.Nine.PartTwo
        , Aoc.Day.Nine.Common
        , Aoc.Day.Ten.PartOne
        , Aoc.Day.Ten.PartTwo
        , Aoc.Day.Ten.Common
        , Aoc.Day.Eleven.PartOne
        , Aoc.Day.Eleven.PartTwo
        , Aoc.Day.Eleven.Common
        , Aoc.Day.Twelve.PartOne
        , Aoc.Day.Twelve.PartTwo
        , Aoc.Day.Twelve.Common
    build-depends:
        base                   >= 4.5 && < 5
        , text                 >= 1.2.5 && < 1.3
        , split
--           base                 ^>=4.15.1.0
        , array                >= 0.5.4 && < 0.6
--         -- , attoparsec           >= 0.14.4 && < 0.15
--         -- , bytestring           >= 0.10.12 && < 0.11
        , containers           >= 0.6.4 && < 0.7
--         -- , primitive            >= 0.7.4 && < 0.8
--         -- , text                 >= 1.2.5 && < 1.3
--         -- , unordered-containers >= 0.2.19 && < 0.3
--         -- , vector               >= 0.13.0 && < 0.14
        -- , regex-base           >= 0.94 && < 0.95
        , regex-tdfa           ^>= 1.3.2
        , mtl
        -- , regex-tdfa-text
    hs-source-dirs:   lib
    ghc-options: -Wall
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable aoc-runner
   main-is: Main.hs
   ghc-options: -Wunused-packages -Wall
   other-modules: Input
   build-depends:
          base
        , aoc-solutions
        , filepath             >= 1.4.2 && < 1.5
        , text                 >= 1.2.5 && < 1.3
   hs-source-dirs: app
   default-language: Haskell2010
   default-extensions: OverloadedStrings

test-suite test-solutions
    type: exitcode-stdio-1.0
    ghc-options: -Wunused-packages -Wall
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        DayOneSpec
        DayTwoSpec
        DayThreeSpec
        DayFourSpec
        DayFiveSpec
        DaySixSpec
        DaySevenSpec
        DayEightSpec
        DayNineSpec
        DayTenSpec
        DayElevenSpec
        DayTwelveSpec
    build-depends:
            base
          , aoc-solutions
          , hspec
    default-language: Haskell2010
    default-extensions: OverloadedStrings


executable aoc
   main-is: Main.hs
   ghc-options: -Wunused-packages -Wall
   other-modules:
        Aoc.Tool.Options
      , Aoc.Tool.Gen
      , Aoc.Tool.Print
      , Aoc.Tool.Input
   build-depends:
          base
        , directory            >= 1.3.6 && < 1.4
        , filepath             >= 1.4.2 && < 1.5
        , optparse-applicative >= 0.17.0 && < 0.18
        , req
        , text
        , dotenv
        , bytestring
        , utf8-string
   hs-source-dirs: tool/aoc
   default-language: Haskell2010
   default-extensions: OverloadedStrings
